
Version 199.1:

 * Macros

 * Modules

 * Fixed bug in `quotient' when first argument is 0 and the second
   argument is inexact. Also fixed `modulo' and `remainder' to return
   exact 0 in this case.

 * Added *?, +?, and ?? (non-greedy operators) to regexp,
   and fixed potential stack overflow.

Version 103.5:

 * Fixed a memory bug in the run-time support for mzc-compiled code.

 * Added syntax objects and `read-syntax', in preparation for hygienic
   macros. (Not yet documented.)

 * Added `port-count-lines!', which enables line-couting for a port.
   Will be useful for `read-syntax'. (Not yet documented.)

Version 103.4:

 * Upgraded to gc 6.0alpha4

 * 2k: fixed memory bug in thread/continuation setup, and fixed bugs
   in bignum optimizations

Version 103.3:

 * 2k: compiles and runs for Windows (not tested much)

   To compile it, first build and install MzScheme. Also,
   the MSVC tools must be in your path. Then cd to
   plt/src/mzscheme/gc2, and run mzscheme -r winmake.ss.
   The binary will be mz2k.exe in that directory.

Version 103.2:

 * Windows and Unix: MzScheme-implemented threads swap roughly every
   10ms, instead of roughly every 10,000 non-primitive applications.

 * 2k: some bug fixes, performance tuning.

103.1:

 * Fixed `lambda' and `case-lambda' to signal an error when a keyword
   is used as an argument name.

 * Fixed leaks that could happen with thread kills. For example,
   killing a thread blocked on a TCP connect could leak file
   descriptors.

 * Fixed weak hash table growth in the presence of infrequent garbage
   collections (by forcing a collection before rehashing). (PR 934)

 * Fixed/improved some unit/sig error messages. (PRs 304, 830)

------------------------------------------------------------------------

Version 199, ???
Fixed `lambda' and `case-lambda' to signal an error when a keyword
 is used as an argument name
Fixed leaks (file descriptors, etc.) that could happend with
 thread kills